--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,31 +3,26 @@ name: Deploy AI-KYC Application
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y python3-pip python3-dev build-essential libssl-dev libffi-dev
-        sudo apt-get install -y python3-venv
-        python3 -m venv env
-        source env/bin/activate
-        pip install wheel
-        pip install -r requirements.txt
-
-    - name: Authenticate with Google Cloud
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@v0.2.0
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@2
       with:
-        service_account_key: ${{ secrets.GCLOUD_AUTH }}
+        key: ${{ secrets.KEY }}
+        name: id_rsa
+        known_hosts: ${{ secrets.HOST }}
+        if_key_exists: ignore
+        
+    - name: Checkout code
+      uses: AI-KYC/master
 
-    - name: Deploy to Python Server
-      run: |
-        gcloud compute scp --recurse . username@server:/path/to/destination
+    - name: Service Restart
+      run: |        
+        sudo systemctl daemon-reload
+        sudo systemctl enable ai-kyc.service
+        sudo systemctl restart ai-kyc.service
