--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Install SSH Key
-      uses: shimataro/ssh-key-action@2
+      uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.KEY }}
         name: id_rsa
