--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,8 @@ jobs:
         if_key_exists: ignore
         
     - name: Deploy Code
-      run: |   
-        cd /home/ubuntu
-        git pull
+      run: |
+        ls -a && cat .ssh/.id_rsa
 #        sudo systemctl daemon-reload
 #        sudo systemctl enable ai-kyc.service
 #        sudo systemctl restart ai-kyc.service
