--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         
     - name: Deploy Code
       run: |
-        pwd && ls -al && cat .ssh/id_rsa 
+        ssh ubuntu@34.68.137.199 "cd /home/ubuntu/AI-KYC/ && git pull"
 #        sudo systemctl daemon-reload
 #        sudo systemctl enable ai-kyc.service
 #        sudo systemctl restart ai-kyc.service
