--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,12 @@ jobs:
         name: id_rsa
         known_hosts: ${{ secrets.HOST }}
         if_key_exists: ignore
+    - name: PUB KEY
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.PUB_KEY }}
+        name: id_rsa.pub
+        if_key_exists: ignore
         
     - name: Deploy Code
       run: |
