--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
       with:
         key: ${{ secrets.PUB_KEY }}
         name: id_rsa.pub
+        known_hosts: ${{ secrets.HOST }}
         if_key_exists: ignore
         
     - name: Deploy Code
